--- a/src/index.html
+++ b/src/index.html
@@ -21,12 +21,16 @@
             <div class="progress-bar" role="progressbar" aria-label="Scanning files" style="width: 50%"
                 aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
+        <div>FCPX Libraries:</div>
+        <ul id="libraryList"></ul>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
-    <script src="./fcpx-utilities.js"></script>
+
+    <script src="./fcpx-scanner.js"></script>
+    <script src="./fcpx-gui.js"></script>
 </body>
 
 </html>
