--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <h1>FCPX Compagnion</h1>
         <p>
-        <div class="spinner-border" role="status">
+        <div id="spinner" class="spinner-border" role="status">
             <span class="visually-hidden">Loading...</span>
         </div>
         <span id="scanText">Scanning...</span></p>
@@ -25,9 +25,9 @@
         <ul id="libraryList"></ul>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    <!-- script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script -->
 
     <script src="./fcpx-scanner.js"></script>
     <script src="./fcpx-gui.js"></script>
