UI for libraries completed.

--- a/src/index.html
+++ b/src/index.html
@@ -44,12 +44,12 @@
             </li>
         </ul>
 
-        <div id="libraryContents" class="list-group" style="display: none;">
+        <ul id="libraryContents" class="list-group" style="display: none;">
             <!-- ------------- -->
             <!-- THE LIBRARIES -->
             <!-- ------------- -->
-            <a href="#" class="list-group-item list-group-item-action disabled">Aucune librairie découverte...</a>
-        </div>
+            <li class="list-group-item disabled">Aucune librairie découverte...</li>
+        </ul>
         
         <div id="backupContents" style="display: none;">
             *** BACKUP ***
