--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,10 @@
         </ul>
         
         <div id="backupContents" style="display: none;">
-            *** BACKUP ***
+            <p>
+                To backup your FinalCut libraries, you must have a disk named "FCPSlave". Then
+                restart the software to start backup.
+            </p>
         </div>
 
         <div id="informationContents" style="display: none;">
