fix: IPC communication

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="./js/jquery.js"></script>
+    <link rel="stylesheet" href="./css/bootstrap.css">
+    <link rel="stylesheet" href="./index.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>FCPX Companion</title>
@@ -56,5 +59,7 @@
         <div id="informationContents" style="display: none;">
         </div>
     </div>
+    <button id="testBtn">TEST</button>
+    <script src="./renderer.js"></script>
   </body>
 </html>
