--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,6 @@
                 <a id="informationTab" class="nav-link" href="#">Informations</a>
             </li>
         </ul>
-ﬁ
         <ul id="libraryContents" class="list-group" style="display: none;">
             <!-- ------------- -->
             <!-- THE LIBRARIES -->
@@ -60,6 +59,7 @@
         </div>
     </div>
     <button id="testBtn">TEST</button>
+    <div id="debug" style="background: red;">--</div>
     <script src="./js/fcpx-gui.js"></script>
     <script src="./js/fcpx-scanner.js"></script>
     <script src="./renderer.js"></script>
