feat: more complete display

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <script src="./js/jquery.js"></script>
     <link rel="stylesheet" href="./css/bootstrap.css">
+    <link rel="stylesheet" href="../node_modules/bootstrap-icons/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./index.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -59,7 +60,7 @@
         </div>
     </div>
     <button id="testBtn">TEST</button>
-    <div id="debug" style="background: red;">--</div>
+    <div id="debug" style="background: red; color: white;">--</div>
     <script src="./js/fcpx-gui.js"></script>
     <script src="./js/fcpx-scanner.js"></script>
     <script src="./renderer.js"></script>
