--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,9 @@
             <a id="backupTab" class="nav-link" href="#">Backups</a>
           </li>
           <li class="nav-item">
+            <a id="fcpxTab" class="nav-link" href="#">FCPX Backups  (<span id="fcpx-badge" >0</span>)</a>
+          </li>
+          <li class="nav-item">
             <a id="informationTab" class="nav-link" href="#">Informations</a>
           </li>
         </ul>
@@ -71,6 +74,10 @@
             "FCPSlave". Then restart the software to start backup.
             </li>
         </ul>
+
+        <div id="fcpxContents" style="display: none">
+            No FCPX backup detected right now.
+        </div>
 
         <div id="informationContents" style="display: none">
             <div id="informationData"></div>
