refactor: version 0.80 ready for React

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="./js/jquery.js"></script>
+    <!--
     <link rel="stylesheet" href="./css/bootstrap.css" />
     <link
       rel="stylesheet"
       href="../node_modules/bootstrap-icons/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="./index.css" />
+    <script type="application/javascript" src="/main_window/jquery.js"></script>
+    -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>FCPX Companion</title>
@@ -15,6 +17,7 @@
   <body>
     <div class="container">
       <h1>FCPX Companion</h1>
+      <div id="app"></div>
 
       <div class="progress" id="scanProgress" style="display: none">
         <div
@@ -86,8 +89,10 @@
       </div>
     </div>
    
-    <script src="./js/fcpx-gui.js"></script>
-    <script src="./js/fcpx-scanner.js"></script>
-    <script src="./renderer.js"></script>
+    <!--
+    <script type="application/javascript" src="./fcpx-gui.js"></script>
+    <script type="application/javascript" src="./fcpx-scanner.js"></script>
+    <script type="application/javascript" src="./fcpx-renderer.js"></script>
+    -->
   </body>
 </html>
