fix: missing file issue

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -7,5 +7,8 @@
   </head>
   <body>
     <div id="app"></div>
+    <p style="text-align: center; font-size:75%; padding-top: 18pt;">
+        Proudly sponsored by the <a href="https://www.cameraclubgeneve.ch/">Caméra Club de Genève</a>.
+    </p>
   </body>
 </html>
