feat(#4): better backup of libraries

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -6,9 +6,8 @@
     <title>FCPX Companion</title>
   </head>
   <body>
-    <div id="app"></div>
-    <p style="text-align: center; font-size:75%; padding-top: 18pt;">
-        Proudly sponsored by the <a href="https://www.cameraclubgeneve.ch/">Caméra Club de Genève</a>.
-    </p>
+    <div id="app">
+        Initializing...
+    </div>
   </body>
 </html>
